--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
+  <!-- RTL-Style Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --rtl-orange:#FF6600;
@@ -24,7 +29,7 @@
     * { border-radius: 0px !important; }
     button, div, span, input, img { border-radius: 0px !important; }
 
-    html,body,#root{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; overflow: hidden;}
+    html,body,#root{height:100%;margin:0;font-family:'Barlow', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; overflow: hidden;}
     body{ background:linear-gradient(180deg,var(--bg), #090909); color:var(--tile); }
     
     ::-webkit-scrollbar { width: 8px; height: 8px; }
@@ -2464,4 +2469,3 @@
   </script>
 </body>
 </html>
-
